# wiki7

./: .env.example  .gitignore  BACKLOG.md  Makefile  PLAN.md  README.md
cdk/: README.md  (+5 more)
data/: BOT_SETUP.md  README.md  pyproject.toml  run_pipeline.py
data/data_pipeline/: .gitignore  apply_hebrew_mapping.py  auto_translate_hebrew.py  compute_competition_stats.py  derive_coach_trophies.py  generate_mapping_stub.py  helpers.py  merge_seasons.py  normalize_enrich_players.py  pipeline_state.py  schemas.py  scrape_cache.py  season_detector.py  wikidata_lookup.py  wikipedia_lookup.py
data/docs/: finding-4-handoff.md
data/tests/: test_compute_competition_stats.py  test_derive_coach_trophies.py  test_edit_page_merger.py  test_fixtures_spider.py  test_helpers.py  test_match_title_format.py  test_merge.py  test_new_page_types_phase3a_r2.py  test_new_spiders_phase3a_r2.py  test_normalize.py  test_page_router.py  test_pipeline_state.py  test_resume_phase3a_r2.py  test_review_gate.py  test_run_pipeline_check_changes.py  test_schemas.py  test_scrape_cache.py  test_scraperapi_proxy.py  test_season_detector.py  test_seed_merged_mapping.py  test_spider_fixes_phase3a.py  test_squad_season_filter.py  test_stats_spider.py  test_template_section_contract.py  test_translation_batch_truncation.py  test_translation_r2.py  test_wiki_import.py  test_wikidata_lookup.py  test_wikipedia_lookup.py  test_wikitext_merger.py
data/tests/fixtures/: bilanz_sample.html  (+18 more)
data/wiki_import/: import_matches.py  import_players.py  import_templates.py  page_router.py  review_gate.py  wikitext_merger.py
(+423 files in other folders)
